--- a/tab-archiver-extension/src/manifest.json
+++ b/tab-archiver-extension/src/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "manifest_version": 3,
   "name": "TabArchiver",
-  "version": "2.7.0",
+  "version": "3.0.0",
   "description": "開いているタブを一括ブックマーク。日付と要約付きフォルダ名で整理保存。",
   "icons": {
     "16": "icons/icon16.png",
@@ -12,6 +12,10 @@
     "bookmarks",
     "tabs",
     "storage"
+  ],
+  "host_permissions": [
+    "https://generativelanguage.googleapis.com/*",
+    "https://openrouter.ai/*"
   ],
   "action": {
     "default_title": "TabArchiver - 全タブをブックマーク保存",
